fixed text overflow

--- a/stylesheets/gamepagestylesheet.css
+++ b/stylesheets/gamepagestylesheet.css
@@ -99,6 +99,7 @@ body {
   text-align: left;
   color: #ffffff;
   font-family: ebitparty;
+  word-wrap:break-word;
 }
 
 input[type="text"]{
